# fcitx5-beast

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: CMakeLists.txt  beast.conf.in.in  beast.cpp  beast.h  webserver.conf.in.in  webserver.cpp  webserver.h
src/config/: config-public.h  config.cpp  config.h
src/controller/: current_input_method.h  router.h
src/subscribe/: ev_map.h  serializing.hpp
test/: CMakeLists.txt  testbeast.cpp
